# ros2-qbsofthand-ur5

./: .gitignore  01 连接ur5检查.md  02 相机连接测试.md  03 softhand控制.md  04 手眼标定.md  05 yolo识别.md  06 物体识别抓取.md  README.md  frames_2026-01-29_19.23.35.gv  requirements.txt  yolo11s.pt
plans/: grasp_strategy_improvement.md
src/grasp_control/: package.xml  setup.py
src/grasp_control/config/: grasp_config.yaml  kinematics.yaml
src/grasp_control/grasp_control/: __init__.py  arm_controller.py  coordinate_transformer.py  grasp_node.py  hand_controller.py  moveit_arm_controller.py
src/grasp_control/launch/: bringup.launch.py  grasp_control.launch.py
src/qbsofthand_control/: package.xml
src/yolo_center_detector/: package.xml  setup.cfg  setup.py
src/yolo_center_detector/config/: extended_disp.yaml
src/yolo_center_detector/launch/: yolo_center.launch.py
src/yolo_center_detector/yolo_center_detector/: detector.py  yolo_center_node.py
tools/: aruco_transform_to_tf.py  source_humble_ros2_ws.bash  test_yolo_detector.py  ur_send_small_trajectory.py  yolo_quick_start.sh
